[gd_scene load_steps=3 format=3 uid="uid://bimlqxwg5scw4"]

[ext_resource type="Script" path="res://assets/scenes/game_scene/game_scene.gd" id="1_i1tu6"]
[ext_resource type="PackedScene" uid="uid://xdtkmlr8l87w" path="res://assets/scenes/game_board/game_board.tscn" id="2_s2l1n"]

[node name="GameScene" type="Node"]
script = ExtResource("1_i1tu6")

[node name="QuitConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Return to Main Menu?"
ok_button_text = "Yes"
dialog_text = "Are you sure you want to return to the Main Menu?"
cancel_button_text = "No"

[node name="GameBoard" parent="." instance=ExtResource("2_s2l1n")]
position = Vector2(64, 64)
tile_size = 64

[node name="CurrentGameLabel" type="Label" parent="GameBoard"]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 128.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Current Game: 1"

[node name="GameOverContainer" type="PanelContainer" parent="."]
visible = false

[node name="MarginContainer" type="MarginContainer" parent="GameOverContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverContainer/MarginContainer"]
layout_mode = 2

[node name="WinnerDiscussionLabel" type="Label" parent="GameOverContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ReplayButton" type="Button" parent="GameOverContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Replay"

[node name="BackToMenuButton" type="Button" parent="GameOverContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Back to Main Menu"

[connection signal="confirmed" from="QuitConfirmationDialog" to="." method="_on_quit_confirmation_dialog_confirmed"]
[connection signal="pressed" from="GameOverContainer/MarginContainer/VBoxContainer/HBoxContainer/ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="GameOverContainer/MarginContainer/VBoxContainer/HBoxContainer/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
